# mnl-demos

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
demo-1/: CMakeLists.txt
demo-1/src/: ctx.c  ctx.h  demo.c
demo-2/: .gitignore  CMakeLists.txt  check_genl_family_id.c  get_genl_family_id.c  main.c  my_functions.h
demo-2/kernel-module/: Kbuild  Kconfig  Makefile  dkms.conf  main.c
demo-2/userspace-tool/: demo_genetlink_user.c
src/: demo.c
